sg.tf
resource "aws_security_group" "lx_srvr_sg" {
  name        = "allow_tls"
  description = "Allow TLS inbound traffic"

  ingress {
    description = "To access linux machine"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    description = "To access apache web server"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  tags = {
    Name = "linux_sg"
    Env = "Development"
    owner = "dev team"
  }
}
